# hpc-sparse-matmul

./: CMakeLists.txt  compile.sh
src/: common.cpp  common.h  communication.cpp  communication.h  context.h  main.cpp  matrix.cpp  matrix.h  mpi_helpers.h  multiplication.cpp  multiplication.h  program_options.cpp  program_options.h  replication_group.cpp  replication_group.h  utils.cpp  utils.h
